# Kongle

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  README.md  flash_application.ocd  openocd-stlink.ocd
bootloader/: README.md
scripts/: debug.sh  flash.sh  flash_app.sh  flash_application.ocd  flash_bootloader.ocd  flash_bootloader.sh  openocd-stlink.ocd
src/: battery.rs  ble_attrs.rs  delay.rs  main.rs  monotonic_nrf52.rs
src/drivers/: mod.rs
src/drivers/flash/: internal.rs  mod.rs
src/drivers/mcuboot/: footer.rs  header.rs  mod.rs
