[package]
name = "kongle"
version = "0.1.0"
authors = ["Petter HS"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = ""

[dependencies]
cortex-m-rtic = "1.1.3"
rtic-monotonic = "1.0.0"
display-interface-spi = "0.4"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
nrf52832-hal = { version = "0.16.0", features = ["rt"], default-features = false }
numtoa = "0.2.4"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
rubble = { git = "https://github.com/petterhs/rubble"}
rubble-nrf5x = { git = "https://github.com/petterhs/rubble", features = ["52832"], default-features = false }
st7789 = { version = "0.7.0", features = ["graphics", "batch"], default-features = false }
lvgl = { git = "https://github.com/petterhs/lvgl-rs", features = ["lvgl_alloc"] }
cstr_core = "0.2.6"
fugit = "0.3.3"
debouncr = "0.2.2"

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
codegen-units = 1
